main.tf
provider "aws" {
  region     = "${var.region}"
  profile    = "${var.profile}"
}

resource "aws_instance" "example" {
  ami           = "ami-c998b6b2"
  instance_type = "t2.micro"
  key_name = "${var.key_name}"
  count = "${var.servers}"
  security_groups = ["${aws_security_group.example.name}"]

  connection {
    user = "${var.user}"
    private_key = "${var.key_path}"
}

}

resource "aws_security_group" "example" {
    name = "example"
    description = "80 and 22"


    // These are for internal traffic
    ingress {
        from_port = 0
        to_port = 65535
        protocol = "tcp"
        self = true
    }

    ingress {
        from_port = 0
        to_port = 65535
        protocol = "udp"
        self = true
    }

    // These are for maintenance
    ingress {
        from_port = 22
        to_port = 22
        protocol = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
    }

    ingress {
        from_port = 80
        to_port = 80
        protocol = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
    }

    // This is for outbound internet access
    egress {
        from_port = 0
        to_port = 0
        protocol = "-1"
        cidr_blocks = ["0.0.0.0/0"]
    }
}
